--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,10 @@ h1, h2, h3, h4, h5, h6 {
 
 h1{
 	padding-top: 20px;
-	padding-bottom: 50px;
+	padding-bottom: 0px;
 	font-size: 28px;
 	display: inline-block;
+	margin-bottom: 50px;
 }
 
 h1 a {
@@ -30,6 +31,8 @@ h1 a {
 h1 a:hover{
 	color:#d5de25;
 	text-decoration: none;
+	border-bottom: 1px solid #d5de25;
+
 
 }
 
@@ -38,14 +41,15 @@ h2 {
 	font-weight: bold;
 	border-bottom: 1px solid #e0ac27;
 	padding-bottom: 10px;
-	letter-spacing: 1px;
 	display:inline-block;
+	letter-spacing: 1px;
+
 	}
 
 
 p {
-	font-size: 18px;
-	line-height: 23px;
+	font-size: 23px;
+	line-height: 40px;
 	margin-bottom: 20px; 
 }
 
@@ -89,22 +93,23 @@ nav ul li a:hover {
 }
 
 main {
-	padding: 20px;
+	overflow: auto;
 	
 }
 
 .text-container{
-	width: 60%;
+	width: 80%;
 }
 
 footer {
 	clear:both;
 	height:50px;
-	text-align:left;
 	border-top: 1px solid black;
+
 }
 
 footer p{
 	color:#e0ac27;
-	margin-top: 20px;
+	margin-top:20px;
+	font-size: 20px;
 }
