--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,6 +92,13 @@ nav ul li a:hover {
 	background-color: aqua; 
 }
 
+.hero{
+	min-height: 400px;
+	background-image:url(../images/churchill-house-5.png);
+	background-position: center center;
+		
+}
+
 main {
 	overflow: auto;
 	
