--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,17 +68,15 @@ header {
 }
 
 nav {
-	float:left;
 	margin-top: 20px;
 }
 
 nav ul {
 	
-	
 }
 
 nav ul li {
-	display:inline-block;
+	display: inline-block;
 }
 
 nav ul li a {
@@ -88,6 +86,9 @@ nav ul li a {
 	padding: 10px 15px;
 	text-transform: uppercase;	
 	border-radius: 8px;
+	width:120px;
+	display:block;
+	
 
 	
 }
@@ -102,6 +103,7 @@ nav ul li a:hover {
 	background-image:url(../images/churchill-house-5.png);
 	background-position: center center;
 	border-radius: 8px;
+	margin-top: 10px;
 		
 }
 
@@ -164,9 +166,4 @@ footer p{
 	    width:auto;
     }
     
-    
-    .nav {
-	    
-	    width:auto;
-	}
-	
+}
